src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* ---- Base Layer ---- */
@layer base {
    * {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
        transition: all 0.3s;
    }

    html {
        scroll-behavior: smooth;
    }

    body {
        @apply font-brand antialiased;
    }
}

/* ---- Components Layer ---- */
@layer components {
    .btn {
        @apply px-4 py-2 rounded-lg font-semibold transition-colors;
    }

    .head {
        @apply text-2xl text-themeNavy capitalize font-medium
    }

    .product_card {
        @apply w-full flex-1 min-w-[240px] max-w-[280px] md:min-w-[48%] lg:min-w-[32%] border border-themeNavy rounded-lg px-2 py-2 relative flex flex-col gap-2
    }

    .product_image {
        @apply rounded-lg object-cover object-center h-[160px] md:h-[200px] xl:h-[225px]
    }

    .product_quality {
        @apply absolute top-5 right-5 bg-themeNavy text-white text-xs capitalize rounded-lg px-2 py-1 md:px-2
    }

    .product_details {
        @apply flex flex-col font-semibold capitalize bg-cardBg rounded-lg px-3 py-4
    }

    .product_name {
        @apply text-base md:text-lg lg:text-xl leading-6
    }

    .product_type {
        @apply text-secondaryText grow
    }

    .product_size {
        @apply border border-themeNavy rounded-full px-2 py-1 text-themeNavy text-xs md:text-sm
    }

    .product_desc {
        @apply text-black font-normal
    }

    .application_card {
        @apply relative w-full flex flex-col gap-2 min-w-[220px] border border-themeNavy rounded-lg px-2 py-2
    }

    .application_image {
        @apply rounded-lg
    }

    .application_details {
        @apply flex flex-col font-semibold capitalize bg-white border rounded-lg px-3 py-2 lg:py-3 xl:px-4
    }

    .application_type {
        @apply text-themeGold grow text-sm lg:text-xl
    }

    .application_desc {
        @apply text-themeNavy text-sm lg:text-lg xl:text-xl font-semibold
    }

    .highlight {
        @apply text-yellow-600
    }
}

/* ---- Utilities Layer ---- */
@layer utilities {
    .content-auto {
        content-visibility: auto;
    }

    .container {
        width: 100%;
        max-width: 1196px;
        margin: 0 auto;
        padding: 15px 15px 80px 15px;
    }

    @media screen and (min-width: 768px) {
        .container {
            padding: 20px 20px 10px 20px;
        }
    }
}

